Update README.2.install_plugin_korean_analyze.md